# sim2real_tracking

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: long2h_pretrain.sh  long2h_pretrain_v2.sh  long2h_pretrain_v3.sh  long2h_pretrain_v4.sh  long_pretrain.sh  long_unified.sh  long_unified_cells.sh  long_unified_cells_v2.sh  master_pipeline.sh
sim2real/: __init__.py  types.py
sim2real/eval/: disentangle.py  recon.py  seg_iou.py  tra.py  viz.py
sim2real/losses/: kl.py  losses.py  matching.py  recon.py  seg.py  supervised.py
sim2real/model/: background.py  encoder.py  film.py  glimpse.py  heads.py  model.py  nets.py  posenc.py  slot_transformer.py  stn.py  style.py  temporal.py
sim2real/priors/: base.py  pres.py  registry.py  style.py  what.py  where.py
sim2real/scripts/: adapt.py  eval_ckpt.py  overfit_decompose.py  overfit_one.py  per_slot_inspect.py  plot_loss_breakdown.py  pretrain.py  render_sim_smoketest.py  sweep_sim2real.py  viz_ckpt.py  zoom_slots.py
sim2real/sim/: api.py  background.py  configs.py  flagella.py  many_cells.py  multiscale.py  primitives.py  render_common.py  splines.py  worms.py
sim2real/train/: adapt.py  batch.py  ckpt.py  freeze.py  log.py  pretrain.py  schedule.py
tests/losses/: test_hungarian.py
tests/model/: test_components.py  test_single_frame.py  test_video_model.py
tests/priors/: test_priors.py
tests/sim/: test_primitives.py  test_shapes.py
tests/train/: test_freeze.py  test_overfit.py
