[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim2real-tracking"
version = "0.1.0"
description = "Object-centric video model with z_what / z_where / z_pres / z_style. Pretrain supervised on simulators, adapt unsupervised across settings and to real microscopy."
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "jaxlib",
    "flax>=0.8",
    "optax>=0.2",
    "chex",
    "orbax-checkpoint",
    "interpax>=0.3",
    "augmax>=0.3",
    "numpyro>=0.16",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn",
    "scikit-image",
    "matplotlib",
    "imageio[ffmpeg]",
    "tensorboardX",
    "tqdm",
    "ml_collections",
    "absl-py",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sim2real*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
